swagger in admin side best products
