# controllers/admin/sorting.go
@@ -8,6 +8,12 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @Summary      Finding best product and category
+// @Description  Admin can find best product and category
+// @Tags Admin
+// @Produce      json
+// @Param        sort   query     string  false  "sort"
+// @Router       /admin/sort [get]
 func ProductSorting(c *gin.Context) {
 
 	sort := c.Query("sort")
@@ -31,11 +37,20 @@ func ProductSorting(c *gin.Context) {
 			ORDER BY top_products.total_quantity DESC
 			LIMIT 10
         `).Find(&items)
-
-		c.JSON(http.StatusOK, gin.H{"top_products": items})
+		var products []gin.H
+		for _, v := range items {
+			products = append(products, gin.H{
+				"id":          v.ID,
+				"name":        v.ProductName,
+				"description": v.Description,
+				"price":       v.ProductPrice,
+				"images":      v.ImageUrls,
+			})
+		}
+		c.JSON(http.StatusOK, gin.H{"code": 200, "status": "Success", "top_products": products})
 	case "categories":
 		var categories []database.Category
-        query.Raw(`
+		query.Raw(`
 		SELECT categories.id, categories.name, SUM(order_items.quantity) AS total_quantity
 		FROM categories
 		JOIN products ON categories.id = products.category_id
@@ -44,7 +59,15 @@ func ProductSorting(c *gin.Context) {
 		ORDER BY total_quantity DESC
 		LIMIT 10
         `).Find(&categories)
-
-        c.JSON(http.StatusOK, gin.H{"top_categories": categories})
+		var categories_list []gin.H
+		for _, v := range categories {
+			categories_list = append(categories_list, gin.H{
+				"id":   v.ID,
+				"name": v.Name,
+			})
+		}
+		c.JSON(http.StatusOK, gin.H{"code": 200, "status": "Success", "top_categories": categories_list})
+	default:
+		c.JSON(401, gin.H{"code": 401, "status": "Failed", "message": "Wrong Query."})
 	}
 }
